#143 test: rewrite unit test of book